syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.bluecc.hubs.stub";
option java_outer_classname = "AccountingLedgerProto";

package domain;

import "google/protobuf/timestamp.proto";
import "google/protobuf/any.proto";
import "google/protobuf/struct.proto";

import "date.proto";
import "timeofday.proto";
import "routines.proto";
import "condition.proto";
import "relay.proto";

// flat-ent: Accounting Transaction
message AcctgTransFlatData {
    option (routines.entity_type) = "AcctgTrans";
    option (routines.keys).keys = "acctg_trans_id";
    option (routines.keys).combine = false;
    option (routines.flat) = true;
    option (routines.has_table) = true;
    // keys: acctgTransId
    string acctg_trans_id = 1 [(routines.opts).field_type = "id", (google.api.graphql.relay_options).id = true];
    string acctg_trans_type_id = 2 [(routines.opts).field_type = "id"];
    string description = 3 [(routines.opts).field_type = "description"];
    google.protobuf.Timestamp transaction_date = 4 [(routines.opts).field_type = "date-time"];
    routines.Indicator is_posted = 5 [(routines.opts).field_type = "indicator"];
    google.protobuf.Timestamp posted_date = 6 [(routines.opts).field_type = "date-time"];
    google.protobuf.Timestamp scheduled_posting_date = 7 [(routines.opts).field_type = "date-time"];
    string gl_journal_id = 8 [(routines.opts).field_type = "id"];
    string gl_fiscal_type_id = 9 [(routines.opts).field_type = "id"];
    string voucher_ref = 10 [(routines.opts).field_type = "short-varchar"];
    google.protobuf.Timestamp voucher_date = 11 [(routines.opts).field_type = "date-time"];
    string group_status_id = 12 [(routines.opts).field_type = "id"];
    string fixed_asset_id = 13 [(routines.opts).field_type = "id"];
    string inventory_item_id = 14 [(routines.opts).field_type = "id"];
    string physical_inventory_id = 15 [(routines.opts).field_type = "id"];
    string party_id = 16 [(routines.opts).field_type = "id"];
    string role_type_id = 17 [(routines.opts).field_type = "id"];
    string invoice_id = 18 [(routines.opts).field_type = "id"];
    string payment_id = 19 [(routines.opts).field_type = "id"];
    string fin_account_trans_id = 20 [(routines.opts).field_type = "id"];
    string shipment_id = 21 [(routines.opts).field_type = "id"];
    string receipt_id = 22 [(routines.opts).field_type = "id"];
    string work_effort_id = 23 [(routines.opts).field_type = "id"];
    string their_acctg_trans_id = 24 [(routines.opts).field_type = "id-long"];
    google.protobuf.Timestamp created_date = 25 [(routines.opts).field_type = "date-time"];
    string created_by_user_login = 26 [(routines.opts).field_type = "id-vlong"];
    google.protobuf.Timestamp last_modified_date = 27 [(routines.opts).field_type = "date-time"];
    string last_modified_by_user_login = 28 [(routines.opts).field_type = "id-vlong"];
    google.protobuf.Timestamp last_updated_tx_stamp = 29 [(routines.opts).field_type = "date-time"];
    google.protobuf.Timestamp created_tx_stamp = 30 [(routines.opts).field_type = "date-time"];
    string tenant_id = 31 [(routines.opts).field_type = "id"];
     

    // extra
    google.protobuf.Struct extra = 54;
    map<string, google.protobuf.Any> attachments = 55 ;
}

message AcctgTransKey{
    string acctg_trans_id = 1 [(routines.opts).field_type = "id", (google.api.graphql.relay_options).id = true];
}

message AcctgTransList{
    repeated AcctgTransFlatData values=1;
    // A token to retrieve next page of results.
    // Pass this value in the
    // [ListRequest.page_token][google.example.library.v1.ListRequest.page_token]
    // field in the subsequent call to `ListAcctgTrans` method to retrieve the next
    // page of results.
    string next_page_token = 2;
    string region_id=3;
}

// Transaction Entry
message AcctgTransEntryData {
    option (routines.entity_type) = "AcctgTransEntry";
    option (routines.keys).keys = "acctg_trans_id, acctg_trans_entry_seq_id";
    option (routines.keys).combine = true;
    option (routines.flat) = true;
    option (routines.has_table) = true;
    // keys: acctgTransId, acctgTransEntrySeqId
    // fields
    string acctg_trans_id = 1 [(routines.opts).field_type = "id"];
    string acctg_trans_entry_seq_id = 2 [(routines.opts).field_type = "id"];
    string acctg_trans_entry_type_id = 3 [(routines.opts).field_type = "id"];
    string description = 4 [(routines.opts).field_type = "description"];
    string voucher_ref = 5 [(routines.opts).field_type = "short-varchar"];
    string party_id = 6 [(routines.opts).field_type = "id"];
    string role_type_id = 7 [(routines.opts).field_type = "id"];
    string their_party_id = 8 [(routines.opts).field_type = "id"];
    string product_id = 9 [(routines.opts).field_type = "id"];
    string their_product_id = 10 [(routines.opts).field_type = "id"];
    string inventory_item_id = 11 [(routines.opts).field_type = "id"];
    string gl_account_type_id = 12 [(routines.opts).field_type = "id"];
    string gl_account_id = 13 [(routines.opts).field_type = "id"];
    string organization_party_id = 14 [(routines.opts).field_type = "id"];
    routines.Currency amount = 15 [(routines.opts).field_type = "currency-amount"];
    string currency_uom_id = 16 [(routines.opts).field_type = "id"];
    routines.Currency orig_amount = 17 [(routines.opts).field_type = "currency-amount"];
    string orig_currency_uom_id = 18 [(routines.opts).field_type = "id"];
    routines.Indicator debit_credit_flag = 19 [(routines.opts).field_type = "indicator"];
    google.type.Date due_date = 20 [(routines.opts).field_type = "date"];
    string group_id = 21 [(routines.opts).field_type = "id"];
    string tax_id = 22 [(routines.opts).field_type = "id"];
    string reconcile_status_id = 23 [(routines.opts).field_type = "id"];
    string settlement_term_id = 24 [(routines.opts).field_type = "id"];
    routines.Indicator is_summary = 25 [(routines.opts).field_type = "indicator"];
    google.protobuf.Timestamp last_updated_tx_stamp = 26 [(routines.opts).field_type = "date-time"];
    google.protobuf.Timestamp created_tx_stamp = 27 [(routines.opts).field_type = "date-time"];
    string id = 28 [(routines.opts).field_type = "id", (google.api.graphql.relay_options).id = true];
            
             

    // extra
    google.protobuf.Struct extra = 43;
    map<string, google.protobuf.Any> attachments = 44;
}


message AcctgTransEntryKey{
    string acctg_trans_id = 1 [(routines.opts).field_type = "id"];
    string acctg_trans_entry_seq_id = 2 [(routines.opts).field_type = "id"];
}

message AcctgTransEntryList{
    repeated AcctgTransEntryData values=1;
    // A token to retrieve next page of results.
    // Pass this value in the
    // [ListRequest.page_token][google.example.library.v1.ListRequest.page_token]
    // field in the subsequent call to `ListAcctgTransEntries` method to retrieve the next
    // page of results.
    string next_page_token = 2;
    string region_id=3;
}


// flat-ent: General Ledger Account
message GlAccountFlatData {
    option (routines.entity_type) = "GlAccount";
    option (routines.keys).keys = "gl_account_id";
    option (routines.keys).combine = false;
    option (routines.flat) = true;
    option (routines.has_table) = true;
    // keys: glAccountId
    string gl_account_id = 1 [(routines.opts).field_type = "id", (google.api.graphql.relay_options).id = true];
    string gl_account_type_id = 2 [(routines.opts).field_type = "id"];
    string gl_account_class_id = 3 [(routines.opts).field_type = "id"];
    string gl_resource_type_id = 4 [(routines.opts).field_type = "id"];
    string gl_xbrl_class_id = 5 [(routines.opts).field_type = "id"];
    string parent_gl_account_id = 6 [(routines.opts).field_type = "id"];
    string account_code = 7 [(routines.opts).field_type = "name"];
    string account_name = 8 [(routines.opts).field_type = "name"];
    string description = 9 [(routines.opts).field_type = "description"];
    string product_id = 10 [(routines.opts).field_type = "id"];
    string external_id = 11 [(routines.opts).field_type = "id"];
    google.protobuf.Timestamp last_updated_tx_stamp = 12 [(routines.opts).field_type = "date-time"];
    google.protobuf.Timestamp created_tx_stamp = 13 [(routines.opts).field_type = "date-time"];
    string tenant_id = 14 [(routines.opts).field_type = "id"];
     

    // extra
    google.protobuf.Struct extra = 55;
    map<string, google.protobuf.Any> attachments = 56 ;
}

message GlAccountKey{
    string gl_account_id = 1 [(routines.opts).field_type = "id", (google.api.graphql.relay_options).id = true];
}

message GlAccountList{
    repeated GlAccountFlatData values=1;
    // A token to retrieve next page of results.
    // Pass this value in the
    // [ListRequest.page_token][google.example.library.v1.ListRequest.page_token]
    // field in the subsequent call to `ListGlAccounts` method to retrieve the next
    // page of results.
    string next_page_token = 2;
    string region_id=3;
}

// GL Account Organization
message GlAccountTypeDefaultData {
    option (routines.entity_type) = "GlAccountTypeDefault";
    option (routines.keys).keys = "gl_account_type_id, organization_party_id";
    option (routines.keys).combine = true;
    option (routines.flat) = true;
    option (routines.has_table) = true;
    // keys: glAccountTypeId, organizationPartyId
    // fields
    string gl_account_type_id = 1 [(routines.opts).field_type = "id"];
    string organization_party_id = 2 [(routines.opts).field_type = "id"];
    string gl_account_id = 3 [(routines.opts).field_type = "id"];
    google.protobuf.Timestamp last_updated_tx_stamp = 4 [(routines.opts).field_type = "date-time"];
    google.protobuf.Timestamp created_tx_stamp = 5 [(routines.opts).field_type = "date-time"];
    string id = 6 [(routines.opts).field_type = "id", (google.api.graphql.relay_options).id = true];
            
             

    // extra
    google.protobuf.Struct extra = 10;
    map<string, google.protobuf.Any> attachments = 11;
}


message GlAccountTypeDefaultKey{
    string gl_account_type_id = 1 [(routines.opts).field_type = "id"];
    string organization_party_id = 2 [(routines.opts).field_type = "id"];
}

message GlAccountTypeDefaultList{
    repeated GlAccountTypeDefaultData values=1;
    // A token to retrieve next page of results.
    // Pass this value in the
    // [ListRequest.page_token][google.example.library.v1.ListRequest.page_token]
    // field in the subsequent call to `ListGlAccountTypeDefaults` method to retrieve the next
    // page of results.
    string next_page_token = 2;
    string region_id=3;
}


// flat-ent: Party (organization) accounting preferences
message PartyAcctgPreferenceFlatData {
    option (routines.entity_type) = "PartyAcctgPreference";
    option (routines.keys).keys = "party_id";
    option (routines.keys).combine = false;
    option (routines.flat) = true;
    option (routines.has_table) = true;
    // keys: partyId
    string party_id = 1 [(routines.opts).field_type = "id", (google.api.graphql.relay_options).id = true];
    int64 fiscal_year_start_month = 2 [(routines.opts).field_type = "numeric"];
    int64 fiscal_year_start_day = 3 [(routines.opts).field_type = "numeric"];
    string tax_form_id = 4 [(routines.opts).field_type = "id"];
    string cogs_method_id = 5 [(routines.opts).field_type = "id"];
    string base_currency_uom_id = 6 [(routines.opts).field_type = "id"];
    string invoice_seq_cust_meth_id = 7 [(routines.opts).field_type = "id"];
    string invoice_id_prefix = 8 [(routines.opts).field_type = "very-short"];
    int64 last_invoice_number = 9 [(routines.opts).field_type = "numeric"];
    google.protobuf.Timestamp last_invoice_restart_date = 10 [(routines.opts).field_type = "date-time"];
    routines.Indicator use_invoice_id_for_returns = 11 [(routines.opts).field_type = "indicator"];
    string quote_seq_cust_meth_id = 12 [(routines.opts).field_type = "id"];
    string quote_id_prefix = 13 [(routines.opts).field_type = "very-short"];
    int64 last_quote_number = 14 [(routines.opts).field_type = "numeric"];
    string order_seq_cust_meth_id = 15 [(routines.opts).field_type = "id"];
    string order_id_prefix = 16 [(routines.opts).field_type = "very-short"];
    int64 last_order_number = 17 [(routines.opts).field_type = "numeric"];
    string refund_payment_method_id = 18 [(routines.opts).field_type = "id"];
    string error_gl_journal_id = 19 [(routines.opts).field_type = "id"];
    routines.Indicator enable_accounting = 20 [(routines.opts).field_type = "indicator"];
    google.protobuf.Timestamp last_updated_tx_stamp = 21 [(routines.opts).field_type = "date-time"];
    google.protobuf.Timestamp created_tx_stamp = 22 [(routines.opts).field_type = "date-time"];
    string tenant_id = 23 [(routines.opts).field_type = "id"];
     

    // extra
    google.protobuf.Struct extra = 38;
    map<string, google.protobuf.Any> attachments = 39 ;
}

message PartyAcctgPreferenceKey{
    string party_id = 1 [(routines.opts).field_type = "id", (google.api.graphql.relay_options).id = true];
}

message PartyAcctgPreferenceList{
    repeated PartyAcctgPreferenceFlatData values=1;
    // A token to retrieve next page of results.
    // Pass this value in the
    // [ListRequest.page_token][google.example.library.v1.ListRequest.page_token]
    // field in the subsequent call to `ListPartyAcctgPreferences` method to retrieve the next
    // page of results.
    string next_page_token = 2;
    string region_id=3;
}

