syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.bluecc.hubs.stub";
option java_outer_classname = "BiDimensionExtraProto";

package domain;

import "google/protobuf/timestamp.proto";
import "google/protobuf/any.proto";
import "google/protobuf/struct.proto";

import "date.proto";
import "timeofday.proto";
import "routines.proto";
import "condition.proto";
import "relay.proto";

// Country Dimension
message CountryDimensionData {
    option (routines.entity_type) = "CountryDimension";
    option (routines.keys).keys = "dimension_id";
    option (routines.keys).combine = false;
    option (routines.flat) = true;
    option (routines.has_table) = true;
    // keys: dimensionId
    // fields
    string dimension_id = 1 [(routines.opts).field_type = "id", (google.api.graphql.relay_options).id = true];
    string geo_id = 2 [(routines.opts).field_type = "id"];
    string geo_name = 3 [(routines.opts).field_type = "name"];
    string geo_code = 4 [(routines.opts).field_type = "short-varchar"];
    string abbreviation = 5 [(routines.opts).field_type = "short-varchar"];
    string tel_country_code = 6 [(routines.opts).field_type = "short-varchar"];
    string cc_tld = 7 [(routines.opts).field_type = "short-varchar"];
    google.protobuf.Timestamp last_updated_tx_stamp = 8 [(routines.opts).field_type = "date-time"];
    google.protobuf.Timestamp created_tx_stamp = 9 [(routines.opts).field_type = "date-time"];
            
             

    // extra
    google.protobuf.Struct extra = 10;
    map<string, google.protobuf.Any> attachments = 11;
}


message CountryDimensionKey{
    string dimension_id = 1 [(routines.opts).field_type = "id", (google.api.graphql.relay_options).id = true];
}

message CountryDimensionList{
    repeated CountryDimensionData values=1;
    // A token to retrieve next page of results.
    // Pass this value in the
    // [ListRequest.page_token][google.example.library.v1.ListRequest.page_token]
    // field in the subsequent call to `ListCountryDimensions` method to retrieve the next
    // page of results.
    string next_page_token = 2;
    string region_id=3;
}


// Currency Dimension
message CurrencyDimensionData {
    option (routines.entity_type) = "CurrencyDimension";
    option (routines.keys).keys = "dimension_id";
    option (routines.keys).combine = false;
    option (routines.flat) = true;
    option (routines.has_table) = true;
    // keys: dimensionId
    // fields
    string dimension_id = 1 [(routines.opts).field_type = "id", (google.api.graphql.relay_options).id = true];
    string currency_id = 2 [(routines.opts).field_type = "id"];
    string description = 3 [(routines.opts).field_type = "description"];
    google.protobuf.Timestamp last_updated_tx_stamp = 4 [(routines.opts).field_type = "date-time"];
    google.protobuf.Timestamp created_tx_stamp = 5 [(routines.opts).field_type = "date-time"];
            
             

    // extra
    google.protobuf.Struct extra = 9;
    map<string, google.protobuf.Any> attachments = 10;
}


message CurrencyDimensionKey{
    string dimension_id = 1 [(routines.opts).field_type = "id", (google.api.graphql.relay_options).id = true];
}

message CurrencyDimensionList{
    repeated CurrencyDimensionData values=1;
    // A token to retrieve next page of results.
    // Pass this value in the
    // [ListRequest.page_token][google.example.library.v1.ListRequest.page_token]
    // field in the subsequent call to `ListCurrencyDimensions` method to retrieve the next
    // page of results.
    string next_page_token = 2;
    string region_id=3;
}


// Date Dimension
message DateDimensionData {
    option (routines.entity_type) = "DateDimension";
    option (routines.keys).keys = "dimension_id";
    option (routines.keys).combine = false;
    option (routines.flat) = true;
    option (routines.has_table) = true;
    // keys: dimensionId
    // fields
    string dimension_id = 1 [(routines.opts).field_type = "id", (google.api.graphql.relay_options).id = true];
    google.type.Date date_value = 2 [(routines.opts).field_type = "date"];
    string description = 3 [(routines.opts).field_type = "description"];
    string day_name = 4 [(routines.opts).field_type = "short-varchar"];
    int64 day_of_month = 5 [(routines.opts).field_type = "numeric"];
    int64 day_of_year = 6 [(routines.opts).field_type = "numeric"];
    string month_name = 7 [(routines.opts).field_type = "short-varchar"];
    int64 month_of_year = 8 [(routines.opts).field_type = "numeric"];
    int64 year_name = 9 [(routines.opts).field_type = "numeric"];
    int64 week_of_month = 10 [(routines.opts).field_type = "numeric"];
    int64 week_of_year = 11 [(routines.opts).field_type = "numeric"];
    string year_month_day = 12 [(routines.opts).field_type = "short-varchar"];
    string year_and_month = 13 [(routines.opts).field_type = "short-varchar"];
    string weekday_type = 14 [(routines.opts).field_type = "short-varchar"];
    google.protobuf.Timestamp last_updated_tx_stamp = 15 [(routines.opts).field_type = "date-time"];
    google.protobuf.Timestamp created_tx_stamp = 16 [(routines.opts).field_type = "date-time"];
            
             

    // extra
    google.protobuf.Struct extra = 20;
    map<string, google.protobuf.Any> attachments = 21;
}


message DateDimensionKey{
    string dimension_id = 1 [(routines.opts).field_type = "id", (google.api.graphql.relay_options).id = true];
}

message DateDimensionList{
    repeated DateDimensionData values=1;
    // A token to retrieve next page of results.
    // Pass this value in the
    // [ListRequest.page_token][google.example.library.v1.ListRequest.page_token]
    // field in the subsequent call to `ListDateDimensions` method to retrieve the next
    // page of results.
    string next_page_token = 2;
    string region_id=3;
}


